--- a/src/loaders/app.scss
+++ b/src/loaders/app.scss
@@ -14,6 +14,7 @@
   padding: 16px;
 }
 
+.hub-m-clickable,
 .clickable {
   cursor: pointer;
 }
